Fix date colour in Overview with dark themes
The date label specified a light background colour but used a default
foreground colour. Dark themes use light foreground colour, making
the label unreadable due to a poor contrast.

This commit sets a dark foreground colour (default foreground colour
of Adwaita theme), so that the date is legible with every theme.

Fixes: #93

--- a/hamster_gtk/resources/css/hamster-gtk.css
+++ b/hamster_gtk/resources/css/hamster-gtk.css
@@ -1,5 +1,6 @@
 #DayRowDateBox {
 	background: #dfdfdf;
+	color: #2e3436;
 }
 
 #OverviewDateLabel {
